# oracle-fusion-agentic-apps

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
agents/: __init__.py  action_agent.py  data_agent.py  policy_agent.py
apps/orchestrator/: main.py
connectors/oracle_fusion/: __init__.py  client.py  mock_client.py  rest_client.py
docs/: guia_apps_agénticas.md
tests/: test_agents.py  test_connectors.py  test_orchestrator.py
workflows/: hire_to_retire.yaml  procure_to_pay.yaml
